# webscraping-product-bot

./: .gitignore  README.md  main.py  main_2.py  pyproject.toml  requirements.txt
app/: abstract.py  amazon_scraper.py  dell_scraper.py
src/: logger.py  postgres_con.py  queries.py
